--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
         <h2>會員登入</h2>
         <form action="" class="d-flex flex-column justify-content-around mb-4">
             <label for="email">帳號:</label>
-            <input type="text" name="email" id="email">
+            <input type="email" name="email" id="email">
             <label for="password">密碼:</label>
             <input type="password" name="password" id="password">
         </form>
