--- a/singup.html
+++ b/singup.html
@@ -36,7 +36,7 @@
             <label for="name">會員名稱: </label>
             <input type="text" name="name" id="name">
             <label for="email">帳號:</label>
-            <input type="text" name="email" id="email">
+            <input type="email" name="email" id="email">
             <label for="password">密碼:</label>
             <input type="password" name="password" id="password">
             <label for="password2">再次輸入密碼:</label>
