--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
             </div>
         </div>
         <div class="bannerDesigner">
-            <div class="bannerImg pointer">
+            <div class="bannerImg">
                 <img src="https://s3-alpha-sig.figma.com/img/ce7b/8ef8/e6285c1f27652e572fb1e7e23d1a5d45?Expires=1672012800&Signature=FdAvtTlvJijaIw~QlvNfmQQF5WRQvIJgkZHo9kOPxARKDMBVRd3XM3suRgvzZgOj9guH45vZafd7QaERt37NYMAV~jog~p1JhZ50NlZmMON7aA4UrMbJvgwFP6i-azhFDq62FOzjY-VhOhPGX2r7CRk8VoeGoYJvXEUArndTpdxcmb6N0CfnUBqSDqQkou6YvQtgXoE5wa~s72qP3c3zA2dIe1KwAehI1udWStPApoYxbdZdyGih3Sz7Dh6faKXwGQAtf7MzDa~OYHRlniZHZik-ZahMFhNjpcKuHhgh~33TJgqOf1k1mRf3sHdEHesUIm2QuUVVkrC5et3pnbCb3A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
                     alt="" class="img-fluid rounded">
                 <div class="top rounded-end">Top 1</div>
                 <p class="designerName">Sherry Lin</p>
             </div>
-            <div class="bannerImg pointer">
+            <div class="bannerImg ">
                 <img src="https://s3-alpha-sig.figma.com/img/78c4/0ecf/b7d01370e0263b23ef1de54dcc91b074?Expires=1672012800&Signature=O4iIJZdliwbOsfVN-sGqV~Tot15Z~oQ6ZBfAWo56OW56so2s8tZcZepwYyJkkIfdAJwFZbI1oEURTqqn8EaPy1jejx9PTVZUvyrPnO9WMtixAnrCGPTVtNW~PbtQHsfnsSifknCyWUuqSuDQkAJWjhinazIPuSm2DAzdm3S4BlOmgMSTk-QF9n7rBKWRGuKMeG1sM6aYWmjo1xZK4eY-DVEfjbemUdsZoOReh1W9OWaVu5JoAwigaXHiKw3tjWVbSrOY24WXZ23FcDIAwO9U5kcP1DwH9rev6eR3m-RKXnUhgYrkjsgdnGb9rATFdlNYfQs1kKbxBe7q8GUzHasL~w__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
                     alt="" class="img-fluid rounded">
                 <div class="top rounded-end">Top 2</div>
