--- a/portfolio.html
+++ b/portfolio.html
@@ -68,18 +68,18 @@
             </div>
         </div>
         <div class="bannerDesigner">
-            <!-- <div class="bannerImg pointer">
-                <img src="https://s3-alpha-sig.figma.com/img/ce7b/8ef8/e6285c1f27652e572fb1e7e23d1a5d45?Expires=1670803200&Signature=g8vj~VAUJu4Eb~Fxv8aApOiIkc1oQxhUEA9znJxRL3WBqrce1pd-ZIv~4Pl-qYmh3TAWkBi3cZk75-rTbptxaHh9RdgyP6oGlk-rE0j-Y59bPnnt33SMlPNl~yZRc5URaFhFRht1rsfVPBId4z3eSLqvhEn31eFdtpKoPKG-j9HgQC6LDOmV9Iv2JbfFnVoOCiqeKmCfNaoMtT3UbNCV951fmUlzeiFoOA8FYjErh0PxyGWFzjU6WlEKaU-i9eo1psx26fHRLnmKD05ZxvfMTLChrOD~2NyY~E-sIVhHGQmHDZ23b~R2gxASmuOy~4fGg5oZHxxmjGlkrxxNrj8qYA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
+            <div class="bannerImg">
+                <img src="https://s3-alpha-sig.figma.com/img/ce7b/8ef8/e6285c1f27652e572fb1e7e23d1a5d45?Expires=1672012800&Signature=FdAvtTlvJijaIw~QlvNfmQQF5WRQvIJgkZHo9kOPxARKDMBVRd3XM3suRgvzZgOj9guH45vZafd7QaERt37NYMAV~jog~p1JhZ50NlZmMON7aA4UrMbJvgwFP6i-azhFDq62FOzjY-VhOhPGX2r7CRk8VoeGoYJvXEUArndTpdxcmb6N0CfnUBqSDqQkou6YvQtgXoE5wa~s72qP3c3zA2dIe1KwAehI1udWStPApoYxbdZdyGih3Sz7Dh6faKXwGQAtf7MzDa~OYHRlniZHZik-ZahMFhNjpcKuHhgh~33TJgqOf1k1mRf3sHdEHesUIm2QuUVVkrC5et3pnbCb3A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
                     alt="" class="img-fluid rounded">
                 <div class="top rounded-end">Top 1</div>
                 <p class="designerName">Sherry Lin</p>
             </div>
-            <div class="bannerImg pointer">
-                <img src="https://s3-alpha-sig.figma.com/img/78c4/0ecf/b7d01370e0263b23ef1de54dcc91b074?Expires=1670803200&Signature=cENSmsHF6u-~U5uSU27bj-XFAcEN~mte4h-r-odqBW~W501pv2TBhmkpGwzE6~3~XxmB40DA0FJ-HECCMltpH5ROZMkMSX9OCO~jBEIt9x5yIApS2~hMHVp5D0wp519CMOijzNUC81bsG~8bnBFuInRIJoTtpeWEoaL8mgOPhpbWcXI49w3VOG04hFEqQizh6fo--UvZpV6TUx-tPSKJFDsHs1x31tVsIzyaenga8SrtSLjb07DY1gSGG8HKAwPHYrjgYm9-OJ25nQx9KkBUq~jKsziJ2re3MvVuuKq2PsfC1trpajheYHXb7APS1G6nw3kYQczqJuKjeyDxTq0-rA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
+            <div class="bannerImg ">
+                <img src="https://s3-alpha-sig.figma.com/img/78c4/0ecf/b7d01370e0263b23ef1de54dcc91b074?Expires=1672012800&Signature=O4iIJZdliwbOsfVN-sGqV~Tot15Z~oQ6ZBfAWo56OW56so2s8tZcZepwYyJkkIfdAJwFZbI1oEURTqqn8EaPy1jejx9PTVZUvyrPnO9WMtixAnrCGPTVtNW~PbtQHsfnsSifknCyWUuqSuDQkAJWjhinazIPuSm2DAzdm3S4BlOmgMSTk-QF9n7rBKWRGuKMeG1sM6aYWmjo1xZK4eY-DVEfjbemUdsZoOReh1W9OWaVu5JoAwigaXHiKw3tjWVbSrOY24WXZ23FcDIAwO9U5kcP1DwH9rev6eR3m-RKXnUhgYrkjsgdnGb9rATFdlNYfQs1kKbxBe7q8GUzHasL~w__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
                     alt="" class="img-fluid rounded">
                 <div class="top rounded-end">Top 2</div>
                 <p class="designerName ">Christine Chen</p>
-            </div> -->
+            </div>
         </div>
     </div>
 
